# spurt

./: .gitignore  README.md  requirements.txt  setup.cfg
spurt/: __init__.py  _spurt.py  spurt.lark  spurt_parser.py
tests/: layout.dash  test_parser.py  test_spurt.py
tests/apps/: spurt_app.py
