[metadata]
name = spurt
version = attr: spurt.__version__
author = Philippe Duval
author_email = t4rk@outlook.com
description = Domain specific language for creating dash apps.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_packages_data = True
install_requires =
    dash
    lark-parser
    dash-core-components
    dash-html-components

[options.packages.find]
exclude =
    tests
